--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <script src="http://fb.me/JSXTransformer-0.12.1.js"></script>
 <script type="text/jsx">
 /*Add your React code here*/
-
-
+// adding code here
 </script>
 </body>
 </html>
